common/kustomize/traefik/Middleware-stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /traefik-board
