common/kustomize/traefik/service.yaml
# kustomize/base/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  type: LoadBalancer # This will provision a cloud load balancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: web
    - protocol: TCP
      name: websecure
      port: 443
      targetPort: websecure
    - protocol: TCP
      name: traefik-api
      port: 8080
      targetPort: traefik # For the dashboard/API
    - protocol: TCP
      name: metrics
      port: 8082
      targetPort: metrics # For Prometheus metrics
